manifests/football-app/football-app-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    labels:
        app: mild-temper-microservice
        stack: frontend
        source: demo
    name: mild-temper-microservice
spec:
    replicas: 3
    selector:
        matchLabels:
            run: mild-temper-microservice
    template:
        metadata:
            labels:
                app: mild-temper-microservice
                run: mild-temper-microservice
                source: demo
        spec:
            containers:
                -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/mild-temper-microservice
                    name: mild-temper-microservice
                    ports:
                        -   name: web
                            containerPort: 8080
