manifests/football-app/football-app-service.yaml
kind: Service
apiVersion: v1
metadata:
    labels:
        app: mild-temper-microservice-service
        stack: frontend
    name: mild-temper-microservice-service
spec:
    selector:
        source: demo
        app: mild-temper-microservice
    ports:
        -   name: web
            protocol: TCP
            port: 30201
            targetPort: 8080
