manifests/football-app/football-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    labels:
        stack: frontend
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$2
    name: mild-temper-ingress
spec:
    rules:
        -   http:
                paths:
                    -   path: /mild-temper(/|$)(.*)
                        backend:
                            serviceName: mild-temper-microservice-service
                            servicePort: 30201
