manifests/football-app/football-app-microservice.yaml
kind: Service
apiVersion: v1
metadata:
    labels:
        app: mild-temper-microservice-service
        stack: frontend
    name: mild-temper-microservice-service
    namespace: default
spec:
    selector:
        source: demo
        app: mild-temper-microservice
    ports:
        -   name: web
            protocol: TCP
            port: 30201
            targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    labels:
        stack: frontend
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$2
    name: mild-temper-ingress
    namespace: default
spec:
    rules:
        -   http:
                paths:
                    -   path: /mild-temper(/|$)(.*)
                        pathType: Prefix
                        backend:
                            service:
                                name: mild-temper-microservice-service
                                port:
                                  number: 30201
---
kind: Deployment
apiVersion: apps/v1
metadata:
    labels:
        app: mild-temper-microservice
        stack: frontend
        source: demo
    name: mild-temper-microservice
    namespace: default
spec:
    replicas: 3
    selector:
        matchLabels:
            run: mild-temper-microservice
    template:
        metadata:
            labels:
                app: mild-temper-microservice
                run: mild-temper-microservice
                source: demo
            namespace: default
        spec:
            containers:
                -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/mild-temper-microservice
                    name: mild-temper-microservice
                    ports:
                        -   name: web
                            containerPort: 9000
